# ShieldPass

./: .editorconfig  .gitignore  INTEGRATION_GUIDE.md  Implementation.md  LICENSE  README.md  filetree.txt  implementation_plan.md  package-lock.json  package.json  render.yaml  shieldpass-frontend.stash.sh  shieldpass-v2-sdk-contracts.md  stash  vercel.json
SDK/: Cargo.toml  package-lock.json  package.json  test-shielded.ts  test-stellar.ts  test.ts  tsconfig.json  tsconfig.tsbuildinfo
SDK/circom/: package-lock.json  package.json
SDK/circom/circuits/: confidential_swap.circom  merkle_insert.circom  note.circom  shielded_transfer.circom
SDK/circom/scripts/: build.sh  export_poseidon_t3.mjs  export_vk_rust.mjs  gen_fixtures.mjs  probe.mjs
SDK/circuits/confidential_swap/: Nargo.toml
SDK/circuits/confidential_swap/src/: main.nr
SDK/circuits/reusable_kyc/: Nargo.toml
SDK/circuits/reusable_kyc/src/: main.nr
SDK/circuits/shielded_transfer/: Nargo.toml
SDK/circuits/shielded_transfer/src/: main.nr
SDK/contracts/compliance_registry/: Cargo.toml
SDK/contracts/compliance_registry/src/: lib.rs
SDK/contracts/shielded_pool/: Cargo.toml  poseidon_t3_kat.json
SDK/contracts/shielded_pool/src/: groth16.rs  lib.rs  poseidon_constants.rs  (+3 more)
SDK/scripts/: deploy-and-smoke.md
SDK/src/: ShieldPassClient.ts  accountLock.ts  circuitInputs.ts  errors.test.ts  errors.ts  groth16Prover.ts  identity.ts  index.ts  issuer.ts  notes.ts  passkey.ts  poseidon.ts  prover.ts  shieldedPool.ts  smartAccount.ts  snarkjs.d.ts  stellar.ts  tree.ts  types.ts  utils.test.ts  utils.ts
(+165 files in other folders)
