[workspace]
resolver = "2"
members = [
    "contracts/shielded_pool"
]

[profile.release]
overflow-checks = true
opt-level = "z"

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

# Shared test dependencies across all contracts
[workspace.dependencies]
soroban-sdk = { version = "25.0.0", features = ["testutils"] }
